# data-gen

./: .pylintrc  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data-gen/core/: README.md
data-gen/core/tests/: test_smoke.py
data_gen/core/: generator.py  llm_requester.py  logger.py
data_gen/core/tests/: test_generator.py  test_llm_requester.py
