[project]
name = "core"
version = "0.1.0"
description = "Core synthetic data generation logic for LLM post-training."
authors = [
  { name = "Your Name", email = "your@email.com" }
]
requires-python = ">=3.9"
readme = "README.md"

[project.optional-dependencies]
test = [
  "pytest"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta" 