[project]
name = "core"
version = "0.1.0"
description = "Core synthetic data generation logic for LLM post-training."
authors = [
  { name = "Your Name", email = "your@email.com" }
]
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
  "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry.dependencies]
colorama = "^0.4.6"
python-dotenv = "^1.0.1"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120 